--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="box-1">Box 1</div>
-    <div class="box-2">Box 2</div>
-    <div class="box-3">Box 3</div>
+  <div class="box-main">
+    <div class="Box-1">Box 1</div>
+    <div class="Box-2">Box 2</div>
+    <div class="Box-3">Box 3</div>
   </div>
 </body>
 
